style.css
body {
    background: url("./Resources/background.jpg");    /* background: no-repeat center/100% url("./Resources/background.jpg"); */
    font-family: Arial, sans-serif;
    color: #FFF;
}
.container {
    display: flex;
    flex-direction: row;
    align-items: start;
    justify-content: center;
    margin-top: 150px;
}
.linux,
.windows {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 0 20px;
}

.linux {
    align-items: start;
    justify-content: start;
    
}

.windows {
    align-items: start;
}

.linux-button {
    background-color: #44CC44;
    float: left;
    padding: 20px;
    border-radius: 5px;
    border: none;
    width: 100%;
    cursor: pointer;
    font-size: large;
    font-family: inherit;
}

.linux-button:hover {
    background-color: #ddf16b;
}

.windows-button {
    background-color: #0074CC;
    float: right;
    padding: 20px;
    border-radius: 5px;
    border: none;
    width: 100%;
    cursor: pointer;
    font-size: large;
    font-family: inherit;
    
    
}

.windows-button:hover {
    background-color: #6bcbf1;
}

.images {
    width: 110px;
    height: 110px;
    padding: 20px 50px 0px 50px;
}

.photos {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.linux-script {
    float: left;
    padding: 10px;
    border-radius: 5px;
    border: none;
    cursor: pointer;
}

.ubuntu{
    background-color: #e6f59480;
}

.arch {
    background-color: #c3f0b660;
}

.fedora {
    background-color: #9edba888;
}

.windows-script {
    float: left;
    border-radius: 5px;
    background-color: #237dc25d;
    border: 1px solid rgb(2, 0, 128); 
    color: white; 
    padding: 10px 24px; 
    cursor: pointer; 
    float: left; 
    font-family: inherit;
}
.windows-script:hover {
    background-color: #3e828e;
  }

.file-span {
    margin-left: 10px;
}

.linux-instructions {
    display: flex;
    flex-direction: column;
    border: 1px solid #b3b3b3;
    padding: 20px;
    border-radius: 5px;
    background-color: rgba(120,150,000, 0.3);
}

.windows-instructions {
    display: flex;
    flex-direction: column;
    border: 1px solid #b3b3b3;
    padding: 20px;
    border-radius: 5px;
    background-color: rgba(120,150,200, 0.3);
    
}

.btn-group button {

    border: 1px solid green; 
    color: white; 
    padding: 10px 24px; 
    cursor: pointer; 
    float: left; 
    font-family: inherit;
  }
  
  .btn-group button:not(:last-child) {
    border-right: none; 
  }
  
  
  .btn-group:after {
    content: "";
    clear: both;
    display: table;
  }
  
  .btn-group button:hover {
    background-color: #3e8e41;
  }

  .command-container {
    position: relative;
    margin-bottom: 1rem;
    padding: 1rem;
    background-color: #e0e0e0;
    color: #2c2c2c;
    border-radius: 8px;
    font-family: monospace;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.command-container.dark {
    background-color: #2c2c2c;
    color: #e0e0e0;
}

.copy-button {
    cursor: pointer;
    border: none;
    background: transparent;
    font-size: 1.5rem;
    color: #888;
    transition: color 0.3s;
}

.copy-button:hover {
    color: #555;
}

a {
    color: yellow;
}

